src/objects/MUSW__Complaint__c.object
<CustomObject>
    <description>Cases to track violations</description>
    <fields>
        <fullName>IsClosed__c</fullName>
        <formula>IF(OR(NOT(ISNULL( MUSW__Closed_Date__c )), NOT(ISNULL( MUSW__ClosedDate__c ))),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Iss_Track_No__c</fullName>
        <formula>IF( OR(ISNULL(MUSW__Tracking_Number__c), MUSW__Tracking_Number__c = &quot;&quot;), HYPERLINK(&quot;../&quot;&amp;Id, Name, &quot;_parent&quot;) &amp; &quot; &quot; &amp; HYPERLINK(&quot;/servlet/servlet.Integration?lid=01N460000004mW0&amp;Id=&quot; &amp; Id &amp; &quot;&amp;ic=1&amp;object=MUSW__Complaint__c&amp;type=&quot;&amp; CASE(MUSW__Type__c,
&quot;Maintenance&quot;,&quot;CM&quot;,
&quot;Standards&quot;,&quot;CS&quot;,
&quot;DEFAULT&quot;)
&amp;&quot;&amp;year=&quot;&amp; TEXT(YEAR(TODAY()))&amp;&quot;&amp;month=&quot;&amp; TEXT(MONTH(TODAY()))&amp;&quot;&amp;day=&quot;&amp; TEXT(DAY(TODAY())), &quot;(Issue No.)&quot;, &quot;_parent&quot;),HYPERLINK( &quot;../&quot;&amp;Id , MUSW__Tracking_Number__c,&quot;_parent&quot; ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Iss. Case No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Age__c</fullName>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <formula>IF(ISNULL(MUSW__Closed_Date__c), TODAY() - DATEVALUE(CreatedDate), IF(MUSW__Closed_Date__c &lt; TODAY(), MUSW__Closed_Date__c - DATEVALUE(CreatedDate),TODAY() - DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__AlertCode__c</fullName>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <label>Alert Code</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Alert_Indicator__c</fullName>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <formula>HYPERLINK(&quot;/apex/musw__TaskAlert?id=&quot;+ Id, IMAGE( 
CASE( MUSW__AlertCode__c, 
0, &quot;/img/samples/light_green.gif&quot;, 
1, &quot;/img/samples/light_yellow.gif&quot;, 
2, &quot;/img/samples/light_red.gif&quot;, 
&quot;/servlet/servlet.ImageServer?oid=&quot;+ $Organization.Id +&quot;&amp;id=01560000000RGSN&quot;), 
&quot;none&quot;), &quot;_top&quot;) + IF(MUSW__Parcel__c != null, &quot; Par: &quot; + HYPERLINK(&quot;/apex/musw__TaskAlert?id=&quot;+  MUSW__Parcel__c, IMAGE( 
CASE( MUSW__Parcel__r.MUSW__AlertCode__c, 
0, &quot;/img/samples/light_green.gif&quot;, 
1, &quot;/img/samples/light_yellow.gif&quot;, 
2, &quot;/img/samples/light_red.gif&quot;, 
&quot;/servlet/servlet.ImageServer?oid=&quot;+ $Organization.Id +&quot;&amp;id=01560000000RGSN&quot;), 
&quot;none&quot;), &quot;_top&quot;),&quot;&quot;)</formula>
        <inlineHelpText>Click to view/add/update your alerts</inlineHelpText>
        <label>Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Alert__c</fullName>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <formula>CASE ( MUSW__AlertCode__c, 
0, &quot;None&quot;, 
1, &quot;At least one active severe Alert&quot;, 
2, &quot;At least one active warning Alert&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alert Note</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__City__c</fullName>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__ClosedDate__c</fullName>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Closed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MUSW__Closed_Date__c</fullName>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Comments__c</fullName>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Internal Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Complaints_Reported</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Days_Till_Closed__c</fullName>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <formula>IF( ISNULL(MUSW__Closed_Date__c) , NULL, MUSW__Closed_Date__c - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days Till Closed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Description__c</fullName>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__IsClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__IsEscalated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <label>Is Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__Issued_Number__c</fullName>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Issued No.</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Latitude__c</fullName>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <label>Latitude</label>
        <precision>14</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Location__c</fullName>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Location Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Longitude__c</fullName>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <label>Longitude</label>
        <precision>14</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Origin__c</fullName>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Field Observation</fullName>
                    <default>true</default>
                    <label>Field Observation</label>
                </value>
                <value>
                    <fullName>Fire</fullName>
                </value>
                <value>
                    <fullName>Petition</fullName>
                </value>
                <value>
                    <fullName>Public Agency</fullName>
                </value>
                <value>
                    <fullName>Police</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Parcel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <label>Parcel</label>
        <referenceTo>MUSW__Parcel__c</referenceTo>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Parent_Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <label>Parent Complaint</label>
        <referenceTo>MUSW__Complaint__c</referenceTo>
        <relationshipName>Complaint</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Post_Zip_Code__c</fullName>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip / Post Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Primary_Parcel_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <inlineHelpText>as indicated on parcel</inlineHelpText>
        <label>Primary Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Priority__c</fullName>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <default>true</default>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <label>Project</label>
        <referenceTo>MUSW__Master_Project__c</referenceTo>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Reason__c</fullName>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abandonment</fullName>
                </value>
                <value>
                    <fullName>As Built</fullName>
                </value>
                <value>
                    <fullName>Change of Use</fullName>
                </value>
                <value>
                    <fullName>Community Feedback</fullName>
                </value>
                <value>
                    <fullName>Concealment</fullName>
                </value>
                <value>
                    <fullName>Disposal</fullName>
                </value>
                <value>
                    <fullName>Excessive</fullName>
                </value>
                <value>
                    <fullName>Exposure</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Neglect</fullName>
                </value>
                <value>
                    <fullName>Obstruction</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Over-growth</fullName>
                </value>
                <value>
                    <fullName>Plan Design</fullName>
                </value>
                <value>
                    <fullName>Propogation</fullName>
                </value>
                <value>
                    <fullName>Unrestrained</fullName>
                </value>
                <value>
                    <fullName>Vandalism</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__State__c</fullName>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <label>State/ Prov.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Status__c</fullName>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Ready for Closure</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Street__c</fullName>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Subject__c</fullName>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Total_Due__c</fullName>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <formula>MUSW__Total_Fees__c - IF(MUSW__Total_Payments__c = 0 , MUSW__Total_Receipts__c, MUSW__Total_Payments__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Total_Fees__c</fullName>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <inlineHelpText>Refreshed by Calc Financials button and Run Automation</inlineHelpText>
        <label>Total Fees</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Total_Payments__c</fullName>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <label>Total Payments</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Total_Receipts__c</fullName>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <inlineHelpText>Refreshed by Calc Financials button and Pay Fees</inlineHelpText>
        <label>Total Receipts</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Tracking_Number__c</fullName>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Case No.</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MUSW__Type__c</fullName>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fire and Life Safety</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Unit__c</fullName>
        <description>Deprecated. Refer to the MUSW__Complaint2 object.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Unit</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <label>Complaint.</label>
    <listViews>
        <fullName>MUSW__All</fullName>
        <columns>NAME</columns>
        <columns>MUSW__Alert_Indicator__c</columns>
        <columns>MUSW__Tracking_Number__c</columns>
        <columns>MUSW__Type__c</columns>
        <columns>MUSW__Status__c</columns>
        <columns>MUSW__Priority__c</columns>
        <columns>MUSW__Contact__c</columns>
        <columns>MUSW__Subject__c</columns>
        <columns>MUSW__Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>C-{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaints.</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>